# forge

./: .gitignore  .gitleaks.toml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PUBLISH.md  README.md  SPLICE_INTEGRATION.md  STATE.md  deny.toml
.planning/: CODEBASE_AUDIT.md  PROJECT.md  (+4 more)
forge-reasoning/: Cargo.toml  README.md
forge-reasoning/benches/: checkpoint_bench.rs
forge-reasoning/docs/: 01_HYPOTHESIS_EVIDENCE_BOARD.md  06_KNOWLEDGE_GAP_ANALYZER.md  PROJECT_LOG.md  README.md  TDD_WAVE_02.md  TDD_WAVE_03.md  TDD_WAVE_04.md  TDD_WAVE_05.md  TDD_WAVE_06.md  TDD_WAVE_07.md  TDD_WAVE_09.md
forge-reasoning/src/: checkpoint.rs  export_import.rs  lib.rs  service.rs  storage.rs  storage_sqlitegraph.rs  thread_safe.rs  websocket.rs
forge-reasoning/src/belief/: graph.rs  mod.rs  scc.rs
forge-reasoning/src/gaps/: analyzer.rs  mod.rs  scoring.rs  suggestions.rs
forge-reasoning/src/hypothesis/: confidence.rs  evidence.rs  mod.rs  storage.rs  types.rs
forge-reasoning/src/impact/: mod.rs  preview.rs  propagation.rs  snapshot.rs
forge-reasoning/src/verification/: check.rs  retry.rs  runner.rs
forge-reasoning/tests/: checkpoint_tests.rs  data_integrity_tests.rs  e2e_tests.rs  global_sequence_tests.rs  integration_tests.rs  thread_safety_tests.rs  websocket_tests.rs
forge-reasoning/tests/e2e/: e2e_checkpoint_workflow.rs  e2e_data_integrity.rs  e2e_recovery_scenarios.rs  e2e_session_management.rs  e2e_websocket_workflow.rs  mod.rs
forge_agent/: Cargo.toml
forge_agent/examples/: debug_react.rs  minimal_agent.rs  orchestration.rs  sandbox_config.rs
forge_agent/src/: agent.rs  agent_config.rs  audit.rs  cli.rs  commit.rs  context.rs  envoy.rs  generate.rs  lib.rs  llm.rs  loop.rs  mutate.rs  observe.rs  orchestrate_tests.rs  planner.rs  policy.rs  prelude.rs  runtime_integration.rs  tests.rs  transaction.rs  verify.rs
forge_agent/src/agent_loop/: mod.rs  phases.rs  tests.rs
forge_agent/src/chat/: conversation.rs  mod.rs  react.rs  react_tests.rs  retrieval.rs  retrieval_tests.rs  sandbox.rs  stream.rs  stream_tests.rs  testing.rs  token_tracker.rs  types.rs
forge_agent/src/chat/hooks/: mod.rs  types.rs
forge_agent/src/chat/providers/: adapter.rs  anthropic.rs  mock.rs  mod.rs  ollama.rs  openai.rs  retry.rs  tests.rs
forge_agent/src/chat/skills/: loader.rs  manifest.rs
forge_agent/src/chat/tools/: builtins.rs  mod.rs  registry.rs  tests.rs  types.rs
forge_agent/src/chat/tools/atheneum_tool/: tests.rs
forge_agent/src/evidence/: recorder.rs  session.rs
forge_agent/src/planner/: mod.rs  parsing.rs  tests.rs  types.rs
forge_agent/src/workflow/: auto_detect.rs  builder.rs  cancellation.rs  checkpoint.rs  combinators.rs  dag.rs  deadlock.rs  examples.rs  executor.rs  explorer.rs  gate.rs  mod.rs  plan.rs  rollback.rs  semgrep.rs  state.rs  task.rs  tasks.rs  timeout.rs  tools.rs  validate.rs  yaml.rs
forge_agent/src/workflow/checkpoint/: mod.rs  validation.rs
forge_agent/src/workflow/dag/: mod.rs  tests.rs
forge_agent/src/workflow/executor/: mod.rs  parallel.rs  serial.rs  tests.rs
forge_agent/src/workflow/executor/tests/: checkpoint.rs  forge_context.rs  resume.rs  timeout.rs
forge_agent/src/workflow/plan/: graph.rs  tests.rs
forge_agent/src/workflow/rollback/: engine.rs  tests.rs  tool_compensation.rs
forge_agent/src/workflow/tasks/: agent_loop.rs  graph_query.rs  mod.rs  shell.rs  tests.rs  tool.rs
forge_agent/src/workflow/tools/: fallback.rs
forge_agent/tests/: envoy_integration.rs  evidence_tests.rs  full_workflow.rs  llm_providers_integration.rs  ollama_integration.rs
forge_core/: Cargo.toml  DEBUGGING.md  MANUAL.md
forge_core/src/: cache.rs  error.rs  indexing.rs  lib.rs  pool.rs  runtime.rs  types.rs  watcher.rs
forge_core/src/analysis/: complexity.rs  dead_code.rs  mod.rs  modules.rs  operations.rs
forge_core/src/cfg/: dominators.rs  mod.rs  path_builder.rs  test_cfg.rs  types.rs
forge_core/src/edit/: mod.rs  undo.rs
forge_core/src/graph/: mod.rs  queries.rs
forge_core/src/knowledge/: mod.rs  nodes.rs  sync.rs  traversal.rs
forge_core/src/progress/: mod.rs
forge_core/src/project/: mod.rs
forge_core/src/search/: mod.rs
forge_core/src/storage/: mod.rs  store.rs  tests.rs
forge_core/src/treesitter/: c.rs  java.rs  mod.rs  rust.rs
forge_core/tests/: accessor_tests.rs  builder_tests.rs  integration_modules_test.rs  pubsub_integration_tests.rs  runtime_tests.rs  tool_integration_tests.rs
forge_core/tests/e2e/: README.md  mod.rs  wave_01_core.rs  wave_02_graph.rs  wave_03_search.rs  wave_04_edit.rs  wave_05_cfg.rs  wave_06_analysis.rs  wave_07_workflow.rs  wave_08_treesitter_cfg.rs
forge_core/tests/e2e/reports/: FINAL_SUMMARY.md  WAVE_07_WORKFLOW_REPORT.md  WAVE_08_TREESITTER_CFG_REPORT.md
forge_runtime/: Cargo.toml
forge_runtime/src/: lib.rs  metrics.rs
forgekit_core/: Cargo.toml  DEBUGGING.md  MANUAL.md  README.md
forgekit_core/src/: cache.rs  error.rs  indexing.rs  lib.rs  pool.rs  runtime.rs  watcher.rs
forgekit_core/src/analysis/: dead_code.rs  impact.rs  modules.rs
forgekit_core/src/cfg/: mod.rs  paths.rs  test_cfg.rs  types.rs
forgekit_core/src/dependency/: mod.rs
forgekit_core/src/diagnostic/: mod.rs
forgekit_core/src/diff/: mod.rs
forgekit_core/src/edit/: identifiers.rs  mod.rs  undo.rs
forgekit_core/src/knowledge/: nodes.rs  traversal.rs  types.rs
forgekit_core/src/search/: mod.rs
forgekit_core/src/storage/: mod.rs  ops.rs  tests.rs
forgekit_core/src/treesitter/: cfg_builder.rs  mod.rs
forgekit_core/src/workspace/: mod.rs
forgekit_core/tests/: accessor_tests.rs  e2e_tests.rs  integration_modules_test.rs  pubsub_integration_tests.rs  tool_integration_tests.rs
forgekit_core/tests/e2e/: mod.rs  wave_01_core.rs  wave_02_graph.rs  wave_03_search.rs  wave_04_edit.rs  wave_05_cfg.rs  wave_06_analysis.rs  wave_07_workflow.rs
forgekit_core/tests/e2e/reports/: FINAL_SUMMARY.md  WAVE_05_CFG_REPORT.md  WAVE_06_ANALYSIS_REPORT.md  WAVE_08_TREESITTER_CFG_REPORT.md
forgekit_runtime/: Cargo.toml  README.md
forgekit_runtime/src/: lib.rs  metrics.rs
(+298 files in other folders)
