[package]
name = "forgekit-agent"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/forge"
readme = "README.md"
description = "ForgeKit agent layer - Deterministic AI loop"

[lib]
name = "forge_agent"
path = "src/lib.rs"

[features]
default = ["sqlite"]

# Storage backends (inherited from forge_core)
sqlite = ["dep:sqlitegraph", "sqlitegraph/sqlite-backend", "forgekit-core/sqlite"]
native-v3 = ["dep:sqlitegraph", "sqlitegraph/native-v3", "forgekit-core/native-v3"]

# Agent operation modes
agent-sqlite = ["sqlite"]
agent-v3 = ["native-v3"]
full = ["sqlite", "native-v3"]
full-sqlite = ["agent-sqlite", "sqlite"]
full-v3 = ["agent-v3", "native-v3"]

[dependencies]
forgekit-core = { version = "0.2.1", path = "../forge_core", default-features = false }
sqlitegraph = { version = "2.0.8", default-features = false, optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
