[package]
name = "forge-agent"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/forge"
readme = "README.md"
description = "ForgeKit agent layer - Workflow orchestration and AI loop"

[lib]
name = "forge_agent"
path = "src/lib.rs"

[[bin]]
name = "forge-agent"
path = "src/cli.rs"

[features]
default = ["sqlite"]

# Storage backends (inherited from forge_core)
sqlite = ["dep:sqlitegraph", "sqlitegraph/sqlite-backend", "forge-core/sqlite"]
full = ["sqlite"]

# LLM providers
llm-ollama = ["dep:reqwest"]
llm-openai = ["dep:reqwest"]
llm-anthropic = ["dep:reqwest"]
llm = ["llm-ollama"]

# Multi-agent coordination
envoy = ["dep:reqwest"]

[dependencies]
forge-core = { version = "0.3.0", path = "../forge_core", default-features = false }
forge-reasoning = { version = "0.1.2", path = "../forge-reasoning" }
forge-runtime = { version = "0.1", path = "../forge_runtime" }
sqlitegraph = { version = "3.0.7", default-features = false, optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
async-trait = "0.1"

sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
mockito = "1"
