[package]
name = "forgekit-core"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/forge"
readme = "README.md"
description = "Deterministic code intelligence SDK - Core library"

[lib]
name = "forge_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
blake3 = "1.5"
regex = "1"

# Graph database
sqlitegraph = { version = "2.0.7", features = ["sqlite-backend", "native-v3"], default-features = false, optional = true }

# Tool integrations - these are the crates published from individual tool repos
magellan = { version = "2.4.6", optional = true }
llmgrep = { version = "3.0.9", optional = true }
mirage-analyzer = { version = "1.0.3", optional = true }
splice = { version = "2.5.3", optional = true }

# For CLI fallback when crates aren't available
which = { version = "6.0", optional = true }

# Tree-sitter for CFG extraction
tree-sitter = { version = "0.22", optional = true }
tree-sitter-c = { version = "0.21", optional = true }
tree-sitter-java = { version = "0.21", optional = true }
tree-sitter-rust = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"

[features]
default = ["sqlite", "tools"]

# Storage backends
# Note: Both backends require sqlitegraph dependency
sqlite = ["dep:sqlitegraph", "sqlitegraph/sqlite-backend"]
native-v3 = ["dep:sqlitegraph", "sqlitegraph/native-v3"]

# Tool integrations with backend selection
# Each tool can use either SQLite or V3 backend

# Magellan (code indexing)
magellan = ["dep:magellan"]
magellan-sqlite = ["magellan"]
magellan-v3 = ["magellan"]

# LLMGrep (semantic search)
llmgrep = ["dep:llmgrep"]
llmgrep-sqlite = ["llmgrep"]
llmgrep-v3 = ["llmgrep", "native-v3"]

# Mirage (CFG analysis)
mirage = ["dep:mirage-analyzer"]
mirage-sqlite = ["mirage"]
mirage-v3 = ["mirage", "native-v3"]

# Splice (code editing)
splice = ["dep:splice"]
splice-sqlite = ["splice"]
splice-v3 = ["splice", "native-v3"]

# Tree-sitter CFG extraction for C, Java, and Rust
treesitter-cfg = ["dep:tree-sitter", "dep:tree-sitter-c", "dep:tree-sitter-java", "dep:tree-sitter-rust"]

# Convenience feature groups
tools = ["magellan", "llmgrep", "mirage", "splice", "which"]
tools-sqlite = ["magellan-sqlite", "llmgrep-sqlite", "mirage-sqlite", "splice-sqlite", "which"]
tools-v3 = ["magellan-v3", "llmgrep-v3", "mirage-v3", "splice-v3", "native-v3", "which"]
full = ["tools", "sqlite", "native-v3", "treesitter-cfg"]
full-sqlite = ["tools-sqlite", "sqlite", "treesitter-cfg"]
full-v3 = ["tools-v3", "native-v3", "treesitter-cfg"]