[package]
name = "forge-core"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/forge"
readme = "README.md"
description = "Deterministic code intelligence SDK - Core library"

[lib]
name = "forge_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
blake3 = "1.5"
regex = "1"
async-trait = "0.1"

# Runtime layer dependencies
notify = "8"

# Graph database
sqlitegraph = { version = "2.2.4", features = ["sqlite-backend"], default-features = false, optional = true }

# Tool integrations - these are the crates published from individual tool repos
magellan = { version = "3.3.8", optional = true }
llmgrep = { version = "3.4.2", optional = true }
mirage-analyzer = { version = "1.4.2", optional = true }
splice = { version = "2.6.9", optional = true }

# For CLI fallback when crates aren't available
which = { version = "6.0", optional = true }

# Tree-sitter for CFG extraction (always available)
tree-sitter = "0.22"
tree-sitter-c = "0.21"
tree-sitter-java = "0.21"
tree-sitter-rust = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"

[features]
default = ["sqlite", "tools"]

# Storage backends
sqlite = ["dep:sqlitegraph", "sqlitegraph/sqlite-backend"]

# Tool integrations
magellan = ["dep:magellan"]
llmgrep = ["dep:llmgrep"]
mirage = ["dep:mirage-analyzer"]
splice = ["dep:splice"]

# Convenience feature groups
tools = ["magellan", "llmgrep", "mirage", "splice", "which"]
full = ["tools", "sqlite"]
