[package]
name = "forge-runtime"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/forge"
readme = "README.md"
description = "ForgeKit runtime layer - Indexing and caching"

[lib]
name = "forge_runtime"
path = "src/lib.rs"

[features]
default = ["sqlite"]

# Storage backends (passed to forge_core)
sqlite = ["forge_core/sqlite", "dep:sqlitegraph"]
native-v3 = ["forge_core/native-v3", "dep:sqlitegraph"]

# Backend-specific runtime features
runtime-sqlite = ["sqlite"]
runtime-v3 = ["native-v3"]
full = ["sqlite", "native-v3"]
full-sqlite = ["runtime-sqlite", "sqlite"]
full-v3 = ["runtime-v3", "native-v3"]

[dependencies]
forge_core = { path = "../forge_core", default-features = false }
sqlitegraph = { version = "2.0.5", default-features = false, optional = true }
tokio = { version = "1", features = ["full"] }
notify = "8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
