[package]
name = "forge-runtime"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/forge"
readme = "README.md"
description = "ForgeKit runtime layer - Indexing and caching"

[lib]
name = "forge_runtime"
path = "src/lib.rs"

[features]
default = ["sqlite"]

# Storage backends (passed to forge_core)
sqlite = ["forge-core/sqlite"]
full = ["sqlite"]

[dependencies]
forge-core = { version = "0.2.2", path = "../forge_core", default-features = false }
sqlitegraph = { version = "2.2.4", default-features = false, optional = true }
tokio = { version = "1", features = ["full"] }
notify = "8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
