[package]
name = "forge-runtime"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/oldnordic/forge"
readme = "README.md"
description = "ForgeKit runtime layer - Indexing and caching"

[lib]
name = "forge_runtime"
path = "src/lib.rs"

[features]
default = ["sqlite", "forge-core/default"]

# Storage backends (passed to forge_core)
sqlite = ["forge-core/sqlite"]
full = ["sqlite", "forge-core/default"]

[dependencies]
forge-core = { version = "0.3.0", path = "../forge_core" }
sqlitegraph = { version = "3.2.5", default-features = false, optional = true }
tokio = { version = "1", features = ["full"] }
notify = "8"
anyhow = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
