[package]
name = "forgekit-runtime"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/oldnordic/forge"
readme = "README.md"
description = "ForgeKit runtime layer - Indexing and caching"

[lib]
name = "forgekit_runtime"
path = "src/lib.rs"

[features]
default = ["sqlite", "forgekit-core/default"]

# Storage backends (passed to forgekit_core)
sqlite = ["forgekit-core/sqlite"]
full = ["sqlite", "forgekit-core/default"]

[dependencies]
forgekit-core = { version = "0.5.0", path = "../forgekit_core" }
sqlitegraph = { version = "3.2.5", default-features = false, optional = true }
tokio = { version = "1", features = ["full"] }
notify = "8"
anyhow = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
